2011-06-30  Robert Larice
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/hisim2/hsm2noi.c ,
 * src/spicelib/devices/hisimhv/hsmhvnoi.c :
   use TMALLOC, funcall, and NULL casts

2011-06-30  Robert Larice
 * src/xspice/cm/cm.c :
   cm.c, swallow type conversion warnings

2011-06-30  Robert Larice
 * src/spicelib/devices/bjt/bjtdefs.h ,
 * src/spicelib/devices/dio/diodefs.h :
   BJTtlev, BJTtlevc, DIOtlev, DIOtlevc, swallow type conversion warnings

2011-06-30  Robert Larice
 * src/spicelib/devices/cpl/cplmpar.c ,
 * src/spicelib/devices/isrc/isrcpar.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
  copy_coeffs(), swallow type conversion warnings

2011-06-26  Robert Larice
 * src/include/hash.h ,
 * src/misc/dstring.c ,
 * src/misc/hash.c :
   swallow type conversion warnings
   FIXME, get rid of this homegrown printf implementation (dstring.c)

2011-06-26 Dietmar Warning
 * devices/bsim4/b4temp.c: zero init with TMALLOC instead of malloc
     a missing pParam->BSIM4tvoffcv = 0; is the actual culprit.
 * devices/bsim4/b4noi.c: correct init the correlated noise slot in noiseDens and
   lnNdens vector, bug should be reported to bsim4 developer team.

2011-06-25 Holger Vogt
 * ivars.c, ivars.h, inpcom.c, inp.c, util.c, util.h:
   rename internal fcn dirname() to ngdirname() because it is different
   from LINUX dirnam().
 * analog/file_source/cfunc.mod: remove implicit char to char* conversion

2011-06-25  Robert Larice
 * src/ngsconvert.c :
   ngsconvert.c, swallow type conversion warnings
   this case
	 (tp == VF_REAL) && iscomplex(v)
   was actually buggy, but couldn't ever happen

2011-06-25  Robert Larice
 * src/xspice/ipc/ipc.c ,
 * src/xspice/ipc/ipcsockets.c :
   ipc.c and ipcsockets.c, swallow type conversion warnings

2011-06-25  Robert Larice
 * src/frontend/plotting/graf.c :
   graf.c, swallow type conversion warnings

2011-06-25 Holger Vogt
 * main.c, defines.h: improved shutdown message for Windows GUI